[fix] Fixed dark mode transition - Added delay for initial change - Added opacity transition for logo and toggle button - Changed to ease in and ease out

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ body {
 	color: var(--dark-grey);
 	font-family: "Avenir Next", Arial, sans-serif;
 	background-color: var(--faded-grey);
-	transition: all 0.3s ease-out;
+	transition: all 0.3s ease-in-out;
 	transition-property: background-color, color;
 }
 
@@ -66,20 +66,31 @@ body.dark-mode {
 	background-color: var(--darker-grey);
 }
 
+.show-if {
+	position: relative;
+}
+
+.show-if-dark, .show-if-light {
+	transition: opacity 0.3s ease-in-out;
+}
+
 .show-if-dark {
-	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
 }
 
 .dark-mode .show-if-dark {
-	display: block;
+	opacity: 1;
 }
 
 .dark-mode .show-if-light {
-	display: none;
+	opacity: 0;
 }
 
 .show-if-desktop {
-	display: none;
+	opacity: 1;
 }
 
 @media (min-width: 576px) {
@@ -141,7 +152,7 @@ a {
 	display: inline-block;
 	color: var(--dark-grey);
 	text-decoration: none;
-	transition: color 0.3s ease-out;
+	transition: color 0.3s ease-in-out;
 }
 
 .dark-mode a {
@@ -201,7 +212,7 @@ section {
 	text-align: center;
 	border: 3px solid;
 	box-sizing: border-box;
-	transition: all 0.3s ease-out;
+	transition: all 0.3s ease-in-out;
 }
 
 .btn:hover,
@@ -239,7 +250,7 @@ nav {
 	z-index: 5;
 	padding: 15px 0;
 	background-color: var(--faded-grey);
-	transition: all 0.3s ease-out;
+	transition: all 0.3s ease-in-out;
 	transition-property: background-color, color;
 }
 
@@ -251,7 +262,7 @@ nav {
 nav.fixed {
 	position: fixed;
 	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-	animation: sliding-menu 0.3s ease-out;
+	animation: sliding-menu 0.3s ease-in-out;
 }
 
 @keyframes sliding-menu {
@@ -316,7 +327,7 @@ nav.fixed {
 	width: 0%;
 	height: 3px;
 	background-color: var(--dark-grey);
-	transition: all 0.3s ease-out;
+	transition: all 0.3s ease-in-out;
 }
 
 .dark-mode .nav-links a:after {
@@ -560,7 +571,7 @@ path {
 	padding: 30px;
 	background-color: white;
 	border-radius: 20px;
-	transition: background-color 0.3s ease-out;
+	transition: background-color 0.3s ease-in-out;
 }
 
 .dark-mode .about-box {
@@ -654,7 +665,7 @@ path {
 	margin: -75%;
 	border-radius: 50%;
 	transform: scale(0) translateZ(0);
-	transition: transform 0.5s ease;
+	transition: transform 0.5s ease-in-out;
 	z-index: 1;
 }
 
@@ -664,7 +675,7 @@ path {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	opacity: 0;
-	transition: all 0.5s ease;
+	transition: all 0.5s ease-in-out;
 	color: white;
 	z-index: 2;
 	width: 100%;
@@ -711,7 +722,7 @@ path {
 	vertical-align:middle;
 	font-size: 36px;
 	color: white;
-	transition: color 0.3s ease-out;
+	transition: color 0.3s ease-in-out;
 }
 
 .github-btn:hover i, .github-btn:focus i {
@@ -773,7 +784,7 @@ footer .container {
 .footer-links li {
 	display: inline-block;
 	color: var(--dark-grey);
-	transition: opacity 0.3s ease-out;
+	transition: opacity 0.3s ease-in-out;
 }
 
 .footer-links li:not(:last-of-type) {
@@ -797,7 +808,7 @@ footer .container {
 	border: none;
 	font-size: 18px;
 	cursor: pointer;
-	transition: opacity 0.3s ease-out;
+	transition: opacity 0.3s ease-in-out;
 }
 
 #dark-mode-toggle .show-if-dark {
